Current:
Stephane Peter (Codehost) - Fri Dec  6 16:31:27 PST 2002
 * Do not display the main GTK dialog until we're done with the EULAs.
 * Various fixes for menu items
Ryan C. Gordon (Epic Games) - Sat Nov 30 12:09:47 EST 2002
 * Significant reduction in bandwidth for console_ui...makes this usable
   on terminals over dialup.
Ryan C. Gordon (Epic Games) - Sun Nov 10 19:55:35 EST 2002
 * Corrected typo in configure.in (thanks, zakk!)
Ryan C. Gordon (icculus.org) - Thu Sep 19 17:05:48 EDT 2002
 * console_ui.c now respects $PAGER environment var.
Stephane Peter (Codehost) - Fri Sep 20 15:46:23 PDT 2002
 * Added --disable-dialog flag to configure script to
   avoid compiling the dialog UI in if necesary.
Stephane Peter (Codehost) - Thu Sep 26 18:38:02 PDT 2002
 * Added 'tag' tag for <option>, and have SETUP_OPTIONTAGS environment
   variable in scripts to be able to determine the set of user options.
Stephane Peter (Codehost) - Wed Oct  9 17:46:25 PDT 2002
 * Preliminary AIX 5.1 port
Stephane Peter (Codehost) - Fri Oct 18 16:26:18 PDT 2002
 * Deprecated 'nobinaries' tag.
Stephane Peter (Codehost) - Mon Nov 11 16:05:01 PST 2002
 * Added 'mode' attribute to binaries and files tag so that permissions
   can be explicitly specified.
John Quigley -  Tue, 19 Nov 2002 19:15:01 -0800
 * Various fixes for Redhat 8.0 menu items.
Ryan C. Gordon (icculus.org) - Tue Jan 14 23:46:31 EST 2003
 * Committed initial MacOS X patches to CVS on behalf of Jon C.


1.6.1:
Stephane Peter (Codehost) - Sun Mar 31 22:46:57 PST 2002
 * Rewrote xsu 0.2.3 to eliminate all dependencies on Gnome, and also added
   proper i18n support to it.
 * Imported the updated setup.sh from TTimo's branch, with very slight changes.
   The setup.data/config.sh script is now officially recognized as well.
Stephane Peter (Codehost) - Thu Apr 11 18:36:47 PDT 2002
 * Added Solaris CDE icons support.
Stephane Peter (Codehost) - Fri May  3 19:57:03 PDT 2002