@@ -2,7 +2,7 @@
    Parses the product INI file in ~/.loki/installed/ and uninstalls the software.
 */
 
-/* $Id: uninstall.h,v 1.7 2002-12-07 00:57:32 megastep Exp $ */
+/* $Id: uninstall.h,v 1.8 2003-02-27 06:16:01 megastep Exp $ */
 
 extern product_t *prod;
 
